added examples and fixing device tree